--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="uLRvGSueNcQFG334wVQ5JnpIyzVNB_S5vZ60onALu7A" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-71QMBG8PQJ"></script>
 <script>
@@ -13,7 +14,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2905561871341444"
      crossorigin="anonymous"></script>
   <meta charset="UTF-8">
-  <title>Terms Explained</title>
+  <title>Summarizer</title>
 </head>
 <body>
 
